--- a/ws/tanaguru-ws-client/pom.xml
+++ b/ws/tanaguru-ws-client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.tanaguru</groupId>
         <artifactId>ws</artifactId>
-        <version>4.0.2</version>
+        <version>4.0.2-SNAPSHOT</version>
     </parent>
     <groupId>org.tanaguru</groupId>
     <artifactId>tanaguru-ws-client</artifactId>
