--- a/ws/tanaguru-ws/pom.xml
+++ b/ws/tanaguru-ws/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.tanaguru</groupId>
         <artifactId>ws</artifactId>
-        <version>4.0.2</version>
+        <version>4.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>tanaguru-ws</artifactId>
     <packaging>war</packaging>
